why did the workflow run 2 times previosuly

--- a/.github/workflows/example1.yml
+++ b/.github/workflows/example1.yml
@@ -4,7 +4,7 @@ on:
   push:
     branches: 
       - main
-
+#why is the main causing two workflows to run?
 jobs:
   j1:
     runs-on: ubuntu-latest
