--- a/.github/workflows/example1.yml
+++ b/.github/workflows/example1.yml
@@ -20,6 +20,6 @@ jobs:
   j3:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/hello-world-javascript-action@v1
+      - uses: actions/hello-world-javascript-action
         with:
           who-to-greet: "world"
