--- a/.github/workflows/example1.yml
+++ b/.github/workflows/example1.yml
@@ -7,9 +7,9 @@ on:
 
 jobs:
   j1:
-    runs-on: ubuntu-latest
     steps:
       - run: echo "This is example one"
+    runs-on: ubuntu-latest
 
   j2:
     runs-on: ubuntu-latest
@@ -20,6 +20,6 @@ jobs:
   j3:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/hello-world-javascript-action
+      - uses: actions/hello-world-javascript-action@v1
         with:
           who-to-greet: "world"
